a2a/1.0/modules/ROOT/pages/a2a-connector-reference.adoc
= A2A Connector 1.0 Reference

Anypoint Connector for Agent2Agent (A2A) (A2A Connector) provides A2A protocol support for LLM agents, enabling your agents to talk to other agents.

== Configurations

[[Client]]
=== Client

The application or AI system that initiates requests and consumes services offered by A2A servers. This allows Mule apps to act as A2A brokers between non A2A “head” agents and A2A “node” agents.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ClientConnection, Client Connection>>
 | The connection types to provide to this configuration. | | x
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  | 
|===

==== Connection Types

[[ClientConnection]]
===== Client Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Server Url a| String |  Base URL of the target A2A server. |  | x
| Request Timeout a| Number | Sets the duration to wait for server responses before timing out requests. |  30 | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Request Timeout* field. |  SECONDS | 
| Authentication a| HttpRequestAuthentication |  |  | 
| Default Headers a| Object | Default headers. |  | 
| Tls Context a| <<Tls>> |  |  | 
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===

==== Associated Operations
* <<CancelTask>> 
* <<DeletePushNotificationConfig>> 
* <<GetCard>> 
* <<GetPushNotificationConfig>> 
* <<GetTask>> 
* <<ListPushNotificationConfigs>> 
* <<SendMessage>> 
* <<SendStreamMessage>> 
* <<SetPushNotificationConfig>> 
* <<TaskResubscribe>> 

---
[[Server]]
=== Server

The A2A server acts as a remote agent that exposes an HTTP(S) endpoint and implements the A2A protocol methods for interacting with other AI agents. This allows Mule-based agents to receive and respond to A2A protocol-compliant requests.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ServerConnection, Connection>> | The connection types to provide to this configuration. | | x
| Name a| String | ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
| Card Json a| String |  Agent card as a JSON string. |  | 
| Card Path a| String |  The location of a file to load the agent card. The file can point to a resource on the classpath or on a disk. |  | 
| Task History Enabled a| Boolean | Set to `true` to enable retrieval of task history. Task history is stored as message objects. |  false | 
| Default Max History Length a| Number | Maximum number of task history objects to store.  |  | 
| Task Repository Object Store a| ObjectStore |  |  | 
|===

==== Connection Types

[[ServerConnection]]
===== Server Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Listener Config a| String |  Reference to the `<http:listener-config>` used to expose the inbound endpoint. |  | x
| Agent Path a| String | Path at which the agent is available. |  | x
| Tls Context Ref a| String |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
|===

==== Associated Operations
* <<SendPushNotification>>
* <<UpdateTaskArtifact>> 
* <<UpdateTaskStatus>> 

==== Associated Sources
* <<PushNotificationConfigListener>> 
* <<TaskListener>> 
* <<TaskStreamListener>> 

[[CancelTask]]
== A2A Client - Cancel Task
`<a2a:cancel-task>`

Cancels the task specified by its unique identifier. It's used to stop a previously initiated task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Id a| Any | Unique identifier for the task. |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_NOT_CANCELABLE 
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED 
* A2A:UNSUPPORTED_OPERATION 

[[DeletePushNotificationConfig]]
== A2A Client - Delete Push Notification Config
`<a2a:delete-push-notification-config>`

Deletes an associated push notification configuration for a task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Get Push Config Params a| Any | Object for fetching the push notification configuration for a task. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:JSON_RPC_ERROR
* A2A:METHOD_NOT_FOUND
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:REQUEST_TIMEOUT
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_CANCELABLE
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:UNSUPPORTED_OPERATION

[[GetCard]]
== A2A Client - Get Card
`<a2a:get-card>`

Gets the agent card.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Use Extended Card a| Boolean |  When true, fetches the authenticated extended agent card instead of the normal agent card. |  false | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INVALID_AGENT_CARD 
* A2A:REQUEST_TIMEOUT
* A2A:RETRY_EXHAUSTED 
* A2A:UNAUTHORIZED 

[[GetPushNotificationConfig]]
== A2A Client - Get Push Notification Config
`<a2a:get-push-notification-config>`

Retrieves the current push notification configuration for a specified task. 

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Get Push Config Params a| Any | Object for fetching the push notification configuration for a task. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:JSON_RPC_ERROR
* A2A:METHOD_NOT_FOUND
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:REQUEST_TIMEOUT
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_CANCELABLE
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:UNSUPPORTED_OPERATION

[[GetTask]]
== A2A Client - Get Task
`<a2a:get-task>`

Retrieves information about a task based on a provided query. This enables you to fetch the status or details of a task from another agent.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Query a| Any |  |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_NOT_CANCELABLE 
* A2A:TASK_NOT_FOUND 
* A2A:UNAUTHORIZED 
* A2A:UNSUPPORTED_OPERATION 

[[ListPushNotificationConfigs]]
== A2A Client - List Push Notification Configs
`<a2a:list-push-notification-configs>`

Retrieves the associated push notification configurations for a specified task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Get Push Config Params a| Any | Object for fetching the push notification configuration for a task. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:JSON_RPC_ERROR
* A2A:METHOD_NOT_FOUND
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:REQUEST_TIMEOUT
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_CANCELABLE
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:UNSUPPORTED_OPERATION

[[SendMessage]]
== A2A Client - Send Message
`<a2a:send-message>`

Sends a message.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Message a| Any | Message to send. |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_NOT_CANCELABLE 
* A2A:TASK_NOT_FOUND 
* A2A:UNAUTHORIZED 
* A2A:UNSUPPORTED_OPERATION


[[SendStreamMessage]]
== A2A Client - Send Stream Message
`<a2a:send-stream-message>`

Sends a message to the A2A agent and establishes an SSE streaming connection to receive real-time status updates, artifacts, and error notifications as the agent processes the request.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Stream Message a| Any | Message to send (MessageSendParams schema). |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<StreamingResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:PUSH_NOTIFICATION_UNSUPPORTED 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_NOT_CANCELABLE 
* A2A:TASK_NOT_FOUND 
* A2A:UNAUTHORIZED 
* A2A:UNSUPPORTED_OPERATION


[[SetPushNotificationConfig]]
== A2A Client - Set Push Notification Config
`<a2a:set-push-notification-config>`

Sets or updates the push notification configuration for a specified task. 

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Push Notification Config a| Any |  Associates a push notification configuration with a specific task.|  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:JSON_RPC_ERROR
* A2A:METHOD_NOT_FOUND
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:REQUEST_TIMEOUT
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_CANCELABLE
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:UNSUPPORTED_OPERATION

[[TaskResubscribe]]
== A2A Client - Task Resubscribe
`<a2a:task-resubscribe>`

Reconnects to an existing SSE streaming session for an ongoing task to receive buffered events and continue receiving real-time updates from where the connection was lost.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Id Params a| Any | Task ID to resubscribe to (TaskIdParams schema). |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  | 
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] | 
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<StreamingResponseAttributes>>
|===

=== For Configurations

* <<Client>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:PUSH_NOTIFICATION_UNSUPPORTED 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_NOT_CANCELABLE 
* A2A:TASK_NOT_FOUND 
* A2A:UNAUTHORIZED 
* A2A:UNSUPPORTED_OPERATION

[[SendPushNotification]]
== A2A Server - Send Push Notification
`<a2a:send-push-notification>`

Sends a push notification with the provided task or message payload. This operation allows sending async updates at various stages or steps of a task, not just at the end. The notification message is automatically wrapped in JSON-RPC format. This is a non-blocking operation that uses CompletionCallback for async result handling.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Notification Message a| Any | The JSON notification message (task or message object). This value is automatically wrapped in JSON-RPC format. | #[payload] | 
| Config Ref a| ConfigurationProvider | Name of the configuration to use to execute this component. |  | x
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  | 
|===

=== For Configurations

* <<Server>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:JSON_RPC_ERROR
* A2A:METHOD_NOT_FOUND
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:REQUEST_TIMEOUT
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_CANCELABLE
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:UNSUPPORTED_OPERATION


[[UpdateTaskArtifact]]
== A2A Server - Update Task Artifact
`<a2a:update-task-artifact>`

Updates a task artifact and broadcasts the update to all connected SSE clients.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Artifact Update Content a| Any | TaskArtifactUpdateEvent content following A2A specification. |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===


=== For Configurations

* <<Server>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:PUSH_NOTIFICATION_UNSUPPORTED 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_NOT_CANCELABLE 
* A2A:TASK_NOT_FOUND 
* A2A:UNAUTHORIZED 
* A2A:UNSUPPORTED_OPERATION

[[UpdateTaskStatus]]
== A2A Server - Update Task Status
`<a2a:update-task-status>`

Updates a task status and broadcasts the update to all connected SSE clients. This operation only works when there is an active streaming context, such as one established by the <<TaskStreamListener>> source.

NOTE: When using this operation in a TaskStreamListener flow, the flow's final payload is ignored. To close the SSE connection, include `final: true` in the TaskStatusUpdateEvent JSON payload.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Status Update Content a| Any | TaskStatusUpdateEvent content following A2A specification. |  #[payload] | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===


=== For Configurations

* <<Server>> 

=== Throws

* A2A:CONNECTIVITY 
* A2A:INTERNAL_ERROR 
* A2A:INVALID_PARAMS 
* A2A:INVALID_REQUEST 
* A2A:JSON_RPC_ERROR 
* A2A:METHOD_NOT_FOUND 
* A2A:PARSE_ERROR 
* A2A:PUSH_NOTIFICATION_UNSUPPORTED 
* A2A:REQUEST_TIMEOUT 
* A2A:RETRY_EXHAUSTED 
* A2A:SERVER_ERROR 
* A2A:TASK_NOT_CANCELABLE 
* A2A:TASK_NOT_FOUND 
* A2A:UNAUTHORIZED 
* A2A:UNSUPPORTED_OPERATION

== Sources

[[PushNotificationConfigListener]]
== A2A Server - On Push Notification Set Listener
`<a2a:push-notification-config-listener>`

Validates the push notification configuration before routing the request to the *Task Listener* source.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean | Primary Node Only specifies whether this source should be executed only on the primary node when running in a cluster. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> | Defines a policy for processing the redelivery of the same message |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
| Additional Headers a| Object | Additional HTTP headers to include with each request. |  |
| Authentication a| HttpRequestAuthentication |  |  |
| Push notification request timeout a| Number |  |  60 | 
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Push notification request timeout* field. |  SECONDS |
| Proxy Config a| HttpProxyConfig | Proxy configuration. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Server>> 

[[TaskListener]]
== A2A Server - Task Listener
`<a2a:task-listener>`

Allows a Mule application to listen for and receive incoming A2A protocol-compliant requests from other AI agents, enabling the Mule-based agent to act as an A2A server and respond to tasks.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean |  Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
| Response a| Any |  |  #[payload] | 
| Response Headers a| Object | HTTP response header.  |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>> 


[[TaskStreamListener]]
== A2A Server - On Task Stream Listener
`<a2a:task-stream-listener>`

Server-side listener for streaming task requests. Activated when clients send streaming requests (messages/stream) to trigger server-side flows and enable real-time SSE event delivery.

This source is a prerequisite for applications to support streaming. This source is to be used in conjunction with <<TaskListener>>.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean | Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  | 
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  | 
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>> 


== Types

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  | 
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  | 
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  | 
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  | 
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures a revocation checking mechanism. |  | 
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  | 
| Password a| String | Password used to protect the truststore. |  | 
| Type a| String | Type of store. |  | 
| Algorithm a| String | Encryption algorithm that the truststore uses. |  | 
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  | 
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system. |  | 
| Type a| String | Type of store. |  | 
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  | 
| Key Password a| String | Password used to protect the private key. |  | 
| Password a| String | Password used to protect the keystore. |  | 
| Algorithm a| String | Encryption algorithm that the keystore uses. |  | 
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  | 
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  | 
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`

Don't use the secondary method to check certificate validity. |  | 
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  | 
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  | 
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  | 
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  | 
|===

=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  | 
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  | 
|===

=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | true  | 
| Count a| Number | How many reconnection attempts the Mule app can make. |  | 
|===

[[ReconnectForever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  | 
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | true | 
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  | 
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  | 
|===

[[ResponseAttributes]]
=== Response Attributes


In A2A Connector 1.0 and later, this represents the HTTP response attributes for an A2A request. This type encapsulates HTTP response metadata, including status code, headers, and reason phrase, that are sent as part of an A2A protocol response.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number | HTTP status code of the response. |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
| Reason Phrase a| String | HTTP reason phrase of the response. |  | 
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT |  |  | 
| Target a| String |  |  | x
|===

[[StreamingResponseAttributes]]
=== Streaming Response Attributes

In A2A Connector 1.0 and later, this represents the HTTP response attributes for A2A streaming operations (SSE). This specialized type extends <<ResponseAttributes>> with streaming-specific metadata, including information about final events received during the SSE session. This final event information is not related to the A2A protocol final event, but the connector's.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Final Event Found a| Boolean | Whether a final event was found during SSE session. | false | 
| Status Code a| Number | HTTP status code of the response. |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
| Reason Phrase a| String | HTTP reason phrase of the response. |  | 
|===

[[RequestAttributes]]
=== Request Attributes

In A2A Connector 1.0 and later, this represents the HTTP request attributes for an A2A incoming request. This type encapsulates the HTTP request metadata, including query parameters and headers, that are received as part of an A2A protocol request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Task Id a| String | The ID assigned to this task, either provided by the client or auto-generated by the connector.|  | x
| Context Id a| String | The context ID assigned to this task, either provided by the client or auto-generated by the connector. |  | x
| Query Params a| Object | The query parameters received in the HTTP request. |  | x
| Headers a| Object | The HTTP headers received in the request. |  | x
| Version a| String | HTTP version of the request. Former `http.version`. |  | x
| Scheme a| String | HTTP scheme of the request. Former `http.scheme`. |  | x
| Method a| String | HTTP method of the request. Former `http.method`. |  | x
| Local Address a| String | Local host address from the server. |  | x
| Remote Address a| String | Remote host address from the sender. Former `http.remote.address`. |  | x
| Client Certificate a| <<CertificateData>> | Client certificate (if 2 way TLS is enabled). Former `http.client.cert`. |  | 
|===

[[CertificateData]]
=== Certificate Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Basic Constraints a| Number | Basic constraints extension value indicating if the certificate can be used to sign other certificates. |  | 
| Critical Extension OI Ds a| Array of String | Object identifiers (OIDs) of critical extensions in the certificate. |  | 
| Encoded a| Binary | The encoded form of the certificate. |  | 
| Extended Key Usage a| Array of String | Extended key usage extension indicating specific purposes for which the certificate public key can be used. |  | 
| Extensions a| Array of <<CertificateExtension>> | Certificate extensions providing additional information about the certificate. |  | 
| Issuer Alternative Names a| Array of <<AlternativeNameData>> | Alternative names for the certificate issuer. |  | 
| Issuer DN a| <<PrincipalData>> | Distinguished name of the certificate issuer. |  | 
| Issuer Unique ID a| Array of Boolean | Unique identifier for the certificate issuer. |  | 
| Issuer X500 Principal a| <<X500PrincipalData>> | X.500 principal information for the certificate issuer. |  | 
| Key Usage a| Array of Boolean | Key usage extension indicating the purposes for which the certificate public key can be used. |  | 
| Name a| String | Name associated with the certificate. |  | 
| Non Critical Extension OI Ds a| Array of String | Object identifiers (OIDs) of non-critical extensions in the certificate. |  | 
| Not After a| Date | Expiration date of the certificate. |  | 
| Not Before a| Date | Date from which the certificate is valid. |  | 
| Public Key a| <<PublicKeyData>> | Public key information from the certificate. |  | 
| Serial Number a| Number | Serial number of the certificate. |  | 
| Serial Number Object a| <<SerialNumberData>> | Serial number object containing detailed serial number information. |  | 
| Sig Alg Name a| String | Name of the signature algorithm used to sign the certificate. |  | 
| Sig Alg OID a| String | Object identifier (OID) of the signature algorithm. |  | 
| Sig Alg Params a| Binary | Parameters for the signature algorithm. |  | 
| Signature a| Binary | Digital signature of the certificate. |  | 
| Subject Alternative Names a| Array of <<AlternativeNameData>> | Alternative names for the certificate subject. |  | 
| Subject DN a| <<PrincipalData>> | Distinguished name of the certificate subject. |  | 
| Subject X500 Principal a| <<X500PrincipalData>> | X.500 principal information for the certificate subject. |  | 
| Type a| String | Type of the certificate. |  | 
| Version a| Number | Version number of the certificate format. |  | 
|===

[[CertificateExtension]]
=== Certificate Extension

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Criticality a| Boolean | Indicates whether the extension is critical. If `true`, the extension must be processed by the certificate user. |  | 
| Oid a| String | Object identifier (OID) that uniquely identifies the extension type. |  | 
| Value a| Binary | The extension value in its encoded form. |  | 
|===

[[AlternativeNameData]]
=== Alternative Name Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | The alternative name value. |  | 
| Type a| Number | The type of alternative name. |  | 
|===

[[PrincipalData]]
=== Principal Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Common Name a| String | The common name (CN) component of the distinguished name. |  | 
| Name a| String | The full distinguished name string representation. |  | 
|===

[[X500PrincipalData]]
=== X500 Principal Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | The X.500 distinguished name in string format. |  | 
|===

[[PublicKeyData]]
=== Public Key Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Algorithm a| String | The algorithm used for the public key (for example, RSA, DSA, EC). |  | 
| Encoded a| Binary | The encoded form of the public key. |  | 
| Modulus a| Number | The modulus value for RSA public keys. |  | 
| Params a| Number | Algorithm-specific parameters for the public key. |  | 
| Public Key a| String | The public key value in string representation. |  | 
|===

[[SerialNumberData]]
=== Serial Number Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Serial Number a| Number | The serial number value of the certificate. |  | 
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times to process a redelivered request unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  | 
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload's `hashCode()` returned. |  | 
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | One or more expressions that determine if a message was redelivered. This property can be set only if the *Use Secure Hash* field is `false`. |  | 
| Object Store a| ObjectStore | Configures the object store that stores the redelivery counter for each message. |  | 
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures how to identify a redelivered message and how to find out when the message was redelivered.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  | 
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  | 
|===

== See Also

* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Studio to Configure a Connector]
* xref:index.adoc[A2A Connector Overview]
* https://help.mulesoft.com[MuleSoft Help Center]
