a2a/2.0/modules/ROOT/pages/a2a-connector-reference.adoc
= A2A Connector 2.0 Reference

Anypoint Connector for Agent2Agent (A2A) (A2A Connector) provides A2A protocol support for LLM agents, enabling your agents to talk to other agents.

== Configurations

[[Client]]
=== Client

The application or AI system that initiates requests and consumes services offered by A2A servers. This allows Mule apps to act as A2A brokers between non A2A “head” agents and A2A “node” agents.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<HttpJsonClientConnection, Http Json Client Connection>>
* <<JsonrpcClientConnection, Jsonrpc Client Connection>> | The connection types to provide to this configuration. | | x
| Name a| String |  ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration.   |  |
|===

==== Connection Types

[[HttpJsonClientConnection]]
===== Http Json Client Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Agent Url a| String |  Base URL for the target A2A agent, used for agent card discovery via `/.well-known/agent-card.json`. |  | x
| Request Timeout a| Number | Sets the duration to wait for server responses before timing out requests. |  30 |
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Request Timeout* field. |  SECONDS |
| Authentication a| HttpRequestAuthentication | Authentication method used when sending requests to the target A2A agent. |  |
| Default Headers a| Object | Default headers. |  |
| Tls Context a| <<Tls>> | Configures TLS for secure communication with the target A2A agent. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

[[JsonrpcClientConnection]]
===== Jsonrpc Client Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Agent Url a| String |  Base URL for the target A2A agent, used for agent card discovery via `/.well-known/agent-card.json`. |  | x
| Request Timeout a| Number | Sets the duration to wait for server responses before timing out requests. |  30 |
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Request Timeout* field. |  SECONDS |
| Authentication a| HttpRequestAuthentication | Authentication method used when sending requests to the target A2A agent. |  |
| Default Headers a| Object | Default headers. |  |
| Tls Context a| <<Tls>> | Configures TLS for secure communication with the target A2A agent. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

==== Associated Operations
* <<CancelTask>>
* <<CreatePushNotificationConfig>>
* <<DeletePushNotificationConfig>>
* <<GetCard>>
* <<GetPushNotificationConfig>>
* <<GetTask>>
* <<ListPushNotificationConfigs>>
* <<ListTasks>>
* <<SendMessage>>
* <<SendStreamMessage>>
* <<SubscribeToTask>>

---
[[Server]]
=== Server

The A2A server acts as a remote agent that exposes an HTTP(S) endpoint and implements the A2A protocol methods for interacting with other AI agents. This allows Mule-based agents to receive and respond to A2A protocol-compliant requests.

==== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | Name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| <<ServerConnection, Connection>> | The connection types to provide to this configuration. | | x
| Name a| String | ID used to reference this configuration. |  | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
| Card Json a| String |  Agent card as a JSON string. |  |
| Card Path a| String |  The absolute path of a JSON file to load the agent card. |  |
| Task History Enabled a| Boolean | Set to `true` to enable retrieval of task history. Task history is stored as message objects. |  true |
| Default Max History Length a| Number | Maximum number of task history objects to store.  |  |
| Task Repository Object Store a| ObjectStore | Object store used to persist tasks and their history. If not set, the default object store is used. |  |
|===

==== Connection Types

[[ServerConnection]]
===== Server Connection


====== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Listener Config a| String |  Reference to the `<http:listener-config>` used to expose the task listener endpoints. |  | x
| Agent Path a| String | Base HTTP path for this agent. The agent card is served at `{agentPath}/.well-known/agent-card.json`. Each interface's JSON-RPC or HTTP+JSON routes are registered at the agent path plus that interface's path. |  | x
| Interfaces a| Array of <<Interface>> |  Interfaces the agent supports. |  | x
| Tls Context Ref a| String | Reference to the TLS context used to secure the inbound endpoint. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
|===

==== Associated Operations
* <<GetTasks>>
* <<GetTasksByContext>>
* <<SendPushNotification>>
* <<SetTaskMetadata>>
* <<UpdateTaskArtifact>>
* <<UpdateTaskStatus>>

==== Associated Sources
* <<OnAsyncRequestListener>>
* <<PushNotificationConfigListener>>
* <<TaskAuthorizerListener>>
* <<TaskListener>>

[[CancelTask]]
== A2A Client - Cancel Task
`<a2a:cancel-task>`

Cancels the task specified by its unique identifier. It's used to stop a previously initiated task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Id a| Any | Unique identifier for the task. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_CANCELABLE
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:VERSION_UNSUPPORTED

[[CreatePushNotificationConfig]]
== A2A Client - Create Push Notification Config
`<a2a:create-push-notification-config>`

Creates a push notification configuration for a specified task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Push Notification Config a| Any |  Associates a push notification configuration with a specific task.|  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:VERSION_UNSUPPORTED

[[DeletePushNotificationConfig]]
== A2A Client - Delete Push Notification Config
`<a2a:delete-push-notification-config>`

Deletes an associated push notification configuration for a task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Get Push Config Params a| Any | Object for fetching the push notification configuration for a task. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:VERSION_UNSUPPORTED

[[GetCard]]
== A2A Client - Get Card
`<a2a:get-card>`

Gets the agent card.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Use Extended Card a| Boolean |  When true, fetches the authenticated extended agent card instead of the normal agent card. |  false |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:EXTENDED_CARD_UNCONFIGURED
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_CARD
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:UNAUTHORIZED
* A2A:UNSUPPORTED_OPERATION
* A2A:VERSION_UNSUPPORTED

[[GetPushNotificationConfig]]
== A2A Client - Get Push Notification Config
`<a2a:get-push-notification-config>`

Retrieves the current push notification configuration for a specified task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Get Push Config Params a| Any | Object for fetching the push notification configuration for a task. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:VERSION_UNSUPPORTED

[[GetTask]]
== A2A Client - Get Task
`<a2a:get-task>`

Retrieves information about a task based on a provided query. This enables you to fetch the status or details of a task from another agent.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Query a| Any | Query object identifying the task to retrieve (TaskQueryParams schema). |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:VERSION_UNSUPPORTED

[[ListPushNotificationConfigs]]
== A2A Client - List Push Notification Configs
`<a2a:list-push-notification-configs>`

Retrieves the associated push notification configurations for a specified task.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| List Push Config Params a| Any | Object for listing the push notification configurations for a task. |  | x
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures whether repeatable streams are used, and their behavior. |  |
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Any
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:VERSION_UNSUPPORTED

[[ListTasks]]
== A2A Client - List Tasks
`<a2a:list-tasks>`

Retrieves a list of tasks from the target agent.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| List Tasks Params a| Any | Object for listing tasks from the target agent. |  | x
| Output Mime Type a| String |  The MIME type of the payload that this operation outputs. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Streaming Strategy a| * <<RepeatableInMemoryIterable>>
* <<RepeatableFileStoreIterable>>
* non-repeatable-iterable |  Configures whether repeatable streams are used, and their behavior. |  |
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Any
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:UNAUTHORIZED
* A2A:VERSION_UNSUPPORTED

[[SendMessage]]
== A2A Client - Send Message
`<a2a:send-message>`

Sends a message.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Message a| Any | Message to send. |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<ResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:CONTENT_TYPE_UNSUPPORTED
* A2A:EXTENSION_SUPPORT_REQUIRED
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:UNSUPPORTED_OPERATION
* A2A:VERSION_UNSUPPORTED


[[SendStreamMessage]]
== A2A Client - Send Stream Message
`<a2a:send-stream-message>`

Sends a message to the A2A agent and establishes an SSE streaming connection to receive real-time status updates, artifacts, and error notifications as the agent processes the request.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Stream Message a| Any | Message to send (MessageSendParams schema). |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<StreamingResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:CONTENT_TYPE_UNSUPPORTED
* A2A:EXTENSION_SUPPORT_REQUIRED
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:UNSUPPORTED_OPERATION
* A2A:VERSION_UNSUPPORTED


[[SubscribeToTask]]
== A2A Client - Subscribe To Task
`<a2a:subscribe-to-task>`

Reconnects to an existing SSE streaming session for an ongoing task to receive buffered events and continue receiving real-time updates from where the connection was lost.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Id Params a| Any | Task ID to resubscribe to (TaskIdParams schema). |  | x
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Additional Properties a| Object | Additional properties to include with the request. Use this field to specify custom key-value pairs that are sent with the A2A connector request. This field is optional and null-safe. |  |
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation's output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<StreamingResponseAttributes>>
|===

=== For Configurations

* <<Client>>

=== Throws

* A2A:CONNECTIVITY
* A2A:CONTENT_TYPE_UNSUPPORTED
* A2A:EXTENSION_SUPPORT_REQUIRED
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:UNSUPPORTED_OPERATION
* A2A:VERSION_UNSUPPORTED

[[GetTasks]]
== A2A Server - Get Tasks
`<a2a:get-tasks>`

Retrieves a batch of tasks from the server's internal task store. Resolved tasks are returned in `tasks`; task IDs that the store doesn't have are reported in `nonExistentTaskIds`. Genuine failures (such as a corrupt store entry, an ObjectStore IO failure, or an unexpected serialization error) are surfaced as A2A errors rather than reported as nonexistent. This is a blocking operation because each lookup performs synchronous IO against the underlying ObjectStore (often Object Store v2). Lookups run sequentially on the calling thread to avoid uncontrolled fan-out against a remote, rate-limited store. The primary use case is resolving `referenceTaskIds` on incoming A2A messages so the agent flow has the full context of referenced tasks.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task IDs a| Array of String |  Task identifiers to retrieve. |  #[payload] |
| History Length a| Number |  Maximum number of most recent history entries to include per task. `0` (default) omits history; a positive value caps history at that many entries. See A2A spec section 3.2.4. |  0 |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
|===

=== For Configurations

* <<Server>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:RETRY_EXHAUSTED

[[GetTasksByContext]]
== A2A Server - Get Tasks By Context
`<a2a:get-tasks-by-context>`

Retrieves every task belonging to a `contextId`, oldest first, from the server's internal task store. A2A 1.0.0 treats a `contextId` as a conversational session that groups multiple task and message objects, so this operation lets an agent flow recover that session by reading all tasks recorded for the context in a single call. The full ordered task list is returned and isn't paged, because the underlying object store offers no ranged or cursored read: the per-context index loads as a single entry regardless. Tasks are never truncated, because dropping tasks would give the agent an incomplete conversation. Use the *History Length* field to bound the message history embedded within each task. Lookups are synchronous IO against the underlying object store, resolved sequentially to avoid uncontrolled fan-out against a remote, rate-limited store. Genuine internal failures (such as an object store IO error or corrupt stored task JSON) are logged server-side with full detail and surfaced as a generic A2A:INTERNAL_ERROR. A blank or unknown `contextId` returns an empty task list rather than an error.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Context Id a| String |  The conversational context whose tasks are retrieved. |  | x
| History Length a| Number |  Maximum number of most recent history entries to include per task. Defaults to all history, for full context reconstruction. |  2147483647 |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Target Variable a| String |  Name of the variable that stores the operation's output. |  |
| Target Value a| String |  Expression that evaluates the operation’s output. The outcome of the expression is stored in the *Target Variable* field. |  #[payload] |
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Any
|===

=== For Configurations

* <<Server>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:RETRY_EXHAUSTED

[[SendPushNotification]]
== A2A Server - Send Push Notification
`<a2a:send-push-notification>`

Sends a push notification with the provided streaming event payload. This operation allows sending asynchronous updates at various stages of a task, not just at the end. The body sent to the push URL is the StreamResponse JSON, as specified in A2A spec section 4.3.3. This is a non-blocking operation that uses a completion callback for asynchronous result handling.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Notification Message a| Any | JSON for a single streaming event (task, message, status update, or artifact update). | #[payload] |
| Config Ref a| ConfigurationProvider | Name of the configuration to use to execute this component. |  | x
| Error Mappings a| Array of <<ErrorMapping>> | Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* <<Server>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:INVALID_AGENT_RESPONSE
* A2A:INVALID_PARAMS
* A2A:INVALID_REQUEST
* A2A:PARSE_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:SERVER_ERROR
* A2A:TASK_NOT_FOUND
* A2A:UNAUTHORIZED
* A2A:VERSION_UNSUPPORTED

[[SetTaskMetadata]]
== A2A Server - Set Task Metadata
`<a2a:set-task-metadata>`

Fully replaces (does not merge) the task's metadata. Pass an empty JSON object (`{}`) to clear it. This operation doesn't dispatch an event; subsequent Get Task or blocking responses return whatever metadata the persisted task carries.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Task Id a| String |  The ID of the task whose metadata is being replaced. |  | x
| Metadata a| Any |  The JSON object to persist as task-level metadata. Pass `{}` to clear existing metadata. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* <<Server>>

=== Throws

* A2A:CONNECTIVITY
* A2A:INTERNAL_ERROR
* A2A:PARSE_ERROR
* A2A:RETRY_EXHAUSTED
* A2A:TASK_NOT_FOUND

[[UpdateTaskArtifact]]
== A2A Server - Update Task Artifact
`<a2a:update-task-artifact>`

Updates a task artifact and dispatches the update through the event dispatcher. Artifacts are progress updates and never close responses. An unknown task ID returns A2A:TASK_NOT_FOUND.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Artifact Update Content a| Any | TaskArtifactUpdateEvent content following A2A specification. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* <<Server>>

=== Throws

* A2A:CONNECTIVITY
* A2A:CONTENT_TYPE_UNSUPPORTED
* A2A:EXTENSION_SUPPORT_REQUIRED
* A2A:INTERNAL_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:TASK_NOT_FOUND
* A2A:UNSUPPORTED_OPERATION

[[UpdateTaskStatus]]
== A2A Server - Update Task Status
`<a2a:update-task-status>`

Updates a task status and dispatches the update through the event dispatcher. Rejects transitions out of terminal states (A2A spec section 3.1.1). An unknown task ID returns A2A:TASK_NOT_FOUND.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Status Update Content a| Any | TaskStatusUpdateEvent content following A2A specification. |  #[payload] |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Error Mappings a| Array of <<ErrorMapping>> |  Set of error mappings. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===


=== For Configurations

* <<Server>>

=== Throws

* A2A:CONNECTIVITY
* A2A:CONTENT_TYPE_UNSUPPORTED
* A2A:EXTENSION_SUPPORT_REQUIRED
* A2A:INTERNAL_ERROR
* A2A:PUSH_NOTIFICATION_UNSUPPORTED
* A2A:RETRY_EXHAUSTED
* A2A:TASK_NOT_FOUND
* A2A:UNSUPPORTED_OPERATION

== Sources

[[OnAsyncRequestListener]]
== A2A Server - On Async Request Listener
`<a2a:on-async-request-listener>`

Lets the agent flow customize the initial Task emitted for streaming (Send Stream Message) and non-blocking (Send Message with `returnImmediately=true`) requests. The flow receives MessageSendParams as the payload (with `taskId` and `contextId` as attributes) and must return a Task, which is used to seed initial state, attach artifacts, or gate the request. Returning a terminal or interrupted Task, or raising an error, rejects the request up front. A missing or unparseable Task is a server-side fault: the client sees A2A:INTERNAL_ERROR with a generic message, while the location and parse detail are logged server-side. Push notification configuration is handled by the <<PushNotificationConfigListener>> source, not this listener.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean | Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
| Task a| Binary |  `@Content` defaults the value to the flow's final `#[payload]`, so on-async-request-listener flows can express the initial Task by setting the payload (for example, via an `<ee:transform>`) without wiring `<a2a:initial-task><a2a:task>` explicitly. An explicit DSL expression overrides the default. |  #[payload] |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>>

[[PushNotificationConfigListener]]
== A2A Server - On Push Notification Set Listener
`<a2a:push-notification-config-listener>`

Validates the push notification configuration before routing the request to the *Task Listener* source.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean | Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> | Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
| Additional Headers a| Object | Additional HTTP headers to include with each request. |  |
| Authentication a| HttpRequestAuthentication | Authentication method used when sending push notification requests. |  |
| Push notification request timeout a| Number | Duration to wait for a push notification request to complete before timing out. |  60 |
| Request Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  Time unit for the *Push notification request timeout* field. |  SECONDS |
| Proxy Config a| HttpProxyConfig | Proxy configuration. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>>

[[TaskAuthorizerListener]]
== A2A Server - Task Authorizer Listener
`<a2a:task-authorizer-listener>`

A2A Server task authorizer listener. Gates every auth-required operation before it executes. The flow's payload shape depends on the operation. For List Tasks, the flow receives a JSON array of candidate `{taskId, contextId}` pairs for the current page and must return a JSON array of the authorized subset (each entry with `taskId` and `contextId`); an empty array denies the entire page. For other auth-required operations (Get Task, Cancel Task, Subscribe To Task, and the push notification config Get, List, and Delete operations), the flow receives the raw JSON-RPC request params as the payload. Successful completion of the flow authorizes the request; the returned payload isn't inspected. To deny a request, raise an error from the flow, which is mapped to UNAUTHORIZED. The current operation is available on `attributes.operationName`.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean | Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
| Authorized Tasks a| Array of Any | For List Tasks, the authorized subset of tasks the flow returns (each entry with `taskId` and `contextId`). An empty array denies the entire page. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Array of Any
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>>

[[TaskListener]]
== A2A Server - Task Listener
`<a2a:task-listener>`

Allows a Mule application to listen for and receive incoming A2A protocol-compliant requests from other AI agents, enabling the Mule-based agent to act as an A2A server and respond to tasks.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | Name of the configuration to use. | | x
| Primary Node Only a| Boolean | Determines whether to execute this source on only the primary node when running Mule instances in a cluster. |  |
| Config Ref a| ConfigurationProvider |  Name of the configuration to use to execute this component. |  | x
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> |  Retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
|Type |Any
| Attributes Type a| <<RequestAttributes>>
|===

=== For Configurations

* <<Server>>


== Types

[[Tls]]
=== TLS

Configures TLS to provide secure communications for the Mule app.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | Comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | Comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | Configures the TLS truststore. |  |
| Key Store a| <<KeyStore>> | Configures the TLS keystore. |  |
| Revocation Check a| * <<StandardRevocationCheck>>
* <<CustomOcspResponder>>
* <<CrlFile>> | Configures a revocation checking mechanism. |  |
|===

[[TrustStore]]
=== Truststore

Configures the truststore for TLS.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the truststore. Mule resolves the path relative to the current classpath and file system. |  |
| Password a| String | Password used to protect the truststore. |  |
| Type a| String | Type of store. |  |
| Algorithm a| String | Encryption algorithm that the truststore uses. |  |
| Insecure a| Boolean | If `true`, Mule stops performing certificate validations. Setting this to `true` can make connections vulnerable to attacks. |  |
|===

[[KeyStore]]
=== Keystore

Configures the keystore for the TLS protocol. The keystore you generate contains a private key and a public certificate.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the keystore. Mule resolves the path relative to the current classpath and file system. |  |
| Type a| String | Type of store. |  |
| Alias a| String | Alias of the key to use when the keystore contains multiple private keys. By default, Mule uses the first key in the file. |  |
| Key Password a| String | Password used to protect the private key. |  |
| Password a| String | Password used to protect the keystore. |  |
| Algorithm a| String | Encryption algorithm that the keystore uses. |  |
|===

[[StandardRevocationCheck]]
=== Standard Revocation Check

Configures standard revocation checks for TLS certificates.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Which elements to verify in the certificate chain:

* `true`

Verify only the last element in the certificate chain.

* `false`

Verify all elements in the certificate chain. |  |
| Prefer Crls a| Boolean | How to check certificate validity:

* `true`

Check the Certification Revocation List (CRL) for certificate validity.

* `false`

Use the Online Certificate Status Protocol (OCSP) to check certificate validity. |  |
| No Fallback a| Boolean | Whether to use the secondary method to check certificate validity:

* `true`

Use the method that wasn't specified in the *Prefer Crls* field (the secondary method) to check certificate validity.

* `false`

Don't use the secondary method to check certificate validity. |  |
| Soft Fail a| Boolean | What to do if the revocation server can't be reached or is busy:

* `true`

Avoid verification failure.

* `false`

Allow the verification to fail. |  |
|===

[[CustomOcspResponder]]
=== Custom OCSP Responder

Configures a custom OCSP responder for certification revocation checks.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response. If specified, the alias must be in the truststore. |  |
|===

[[CrlFile]]
=== CRL File

Specifies the location of the certification revocation list (CRL) file.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | Path to the CRL file. |  |
|===

[[Reconnection]]
=== Reconnection

Configures a reconnection strategy for an operation.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<Reconnect>>
* <<ReconnectForever>> | Reconnection strategy to use. |  |
|===

[[Reconnect]]
=== Reconnect

Configures a standard reconnection strategy, which specifies how often to reconnect and how many reconnection attempts the connector source or operation can make.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | true  |
| Count a| Number | How many reconnection attempts the Mule app can make. |  |
|===

[[ReconnectForever]]
=== Reconnect Forever

Configures a forever reconnection strategy by which the connector source or operation attempts to reconnect at a specified frequency for as long as the Mule app runs.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to attempt to reconnect, in milliseconds. |  |
| Blocking a| Boolean | If `false`, the reconnection strategy runs in a separate, non-blocking thread. | true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

Configures an expiration policy strategy.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | Configures the maximum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | Time unit for the *Max Idle Time* field. |  |
|===

[[ResponseAttributes]]
=== Response Attributes


In A2A Connector 1.0 and later, this represents the HTTP response attributes for an A2A request. This type encapsulates HTTP response metadata, including status code, headers, and reason phrase, that are sent as part of an A2A protocol response.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Status Code a| Number | HTTP status code of the response. |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
| Reason Phrase a| String | HTTP reason phrase of the response. |  |
|===

[[ErrorMapping]]
=== Error Mapping

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Source a| Enumeration, one of:

** ANY
** REDELIVERY_EXHAUSTED
** TRANSFORMATION
** EXPRESSION
** SECURITY
** CLIENT_SECURITY
** SERVER_SECURITY
** ROUTING
** CONNECTIVITY
** RETRY_EXHAUSTED
** TIMEOUT | Type of error to map to the target error type. |  |
| Target a| String | Custom error type to map the source error to. |  | x
|===

[[RepeatableInMemoryIterable]]
=== Repeatable In Memory Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | Number of instances initially allowed in memory to consume the stream and provide random access to it. If the stream contains more data than the buffer can hold, the buffer expands according to the *Buffer Size Increment* field, up to the *Max Buffer Size* limit. The default is 100 instances. |  |
| Buffer Size Increment a| Number | By how much the buffer size expands if it exceeds its initial size. A value of `0` or lower means the buffer doesn't expand, and a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised when the buffer is full. The default is 100 instances. |  |
| Max Buffer Size a| Number | Maximum amount of memory used. If exceeded, a STREAM_MAXIMUM_SIZE_EXCEEDED error is raised. A value of `0` or lower means no limit. |  |
|===

[[RepeatableFileStoreIterable]]
=== Repeatable File Store Iterable

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| In Memory Objects a| Number | Maximum number of instances kept in memory. If more are required, the content is buffered on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | Unit in which *In Memory Objects* is expressed. |  |
|===

[[StreamingResponseAttributes]]
=== Streaming Response Attributes

In A2A Connector 1.0 and later, this represents the HTTP response attributes for A2A streaming operations (SSE). This specialized type extends <<ResponseAttributes>> with streaming-specific metadata, including information about final events received during the SSE session. This final event information is not related to the A2A protocol final event, but the connector's.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Final Event Found a| Boolean | Whether a final event was found during SSE session. | false |
| Status Code a| Number | HTTP status code of the response. |  | x
| Headers a| Object | Map of HTTP headers in the message. |  | x
| Reason Phrase a| String | HTTP reason phrase of the response. |  |
|===

[[Interface]]
=== Interface

One entry under `<a2a:interfaces>`: a protocol binding that specifies a transport and a path segment appended to the connection's agent path for that binding. For example, with agent path `/my-agent` and path `/rpc`, JSON-RPC is exposed at `/my-agent/rpc/`. Use `<a2a:interface protocol="JSONRPC" path="/rpc"/>`.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Protocol a| Enumeration, one of:

** JSONRPC
** HTTP_JSON | Protocol binding (transport) that the interface uses. |  | x
| Path a| String | Path segment appended to the connection's agent path for this binding. |  | x
|===

[[RequestAttributes]]
=== Request Attributes

In A2A Connector 1.0 and later, this represents the HTTP request attributes for an A2A incoming request. This type encapsulates the HTTP request metadata, including query parameters and headers, that are received as part of an A2A protocol request.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Task Id a| String | The ID assigned to this task, either provided by the client or auto-generated by the connector.|  | x
| Context Id a| String | The context ID assigned to this task, either provided by the client or auto-generated by the connector. |  | x
| Query Params a| Object | The query parameters received in the HTTP request. |  | x
| Headers a| Object | The HTTP headers received in the request. |  | x
| Version a| String | HTTP version of the request. Former `http.version`. |  | x
| Scheme a| String | HTTP scheme of the request. Former `http.scheme`. |  | x
| Method a| String | HTTP method of the request. Former `http.method`. |  | x
| Local Address a| String | Local host address from the server. |  | x
| Remote Address a| String | Remote host address from the sender. Former `http.remote.address`. |  | x
| Operation Name a| Enumeration, one of:

** SendMessage
** SendStreamingMessage
** GetTask
** CancelTask
** SubscribeToTask
** CreateTaskPushNotificationConfig
** GetTaskPushNotificationConfig
** ListTaskPushNotificationConfigs
** ListTasks
** DeleteTaskPushNotificationConfig | The A2A operation being processed (for example, GetTask or ListTasks). Populated by the binding layer so flow authors can distinguish which operation is running without parsing the JSON-RPC method themselves. The enum constants match the A2A spec section 3 wire names. |  |
| Tenant a| String | Optional tenant routing key from the A2A request. The tenant parameter is used for agent routing per A2A spec section 3.1.2, allowing a single endpoint URL to host multiple agent implementations. For example, `/assistant/message:send` routes to the "assistant" agent. |  |
| Client Certificate a| <<CertificateData>> | Client certificate (if 2 way TLS is enabled). Former `http.client.cert`. |  |
|===

[[CertificateData]]
=== Certificate Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Basic Constraints a| Number | Basic constraints extension value indicating if the certificate can be used to sign other certificates. |  |
| Critical Extension OI Ds a| Array of String | Object identifiers (OIDs) of critical extensions in the certificate. |  |
| Encoded a| Binary | The encoded form of the certificate. |  |
| Extended Key Usage a| Array of String | Extended key usage extension indicating specific purposes for which the certificate public key can be used. |  |
| Extensions a| Array of <<CertificateExtension>> | Certificate extensions providing additional information about the certificate. |  |
| Issuer Alternative Names a| Array of <<AlternativeNameData>> | Alternative names for the certificate issuer. |  |
| Issuer DN a| <<PrincipalData>> | Distinguished name of the certificate issuer. |  |
| Issuer Unique ID a| Array of Boolean | Unique identifier for the certificate issuer. |  |
| Issuer X500 Principal a| <<X500PrincipalData>> | X.500 principal information for the certificate issuer. |  |
| Key Usage a| Array of Boolean | Key usage extension indicating the purposes for which the certificate public key can be used. |  |
| Name a| String | Name associated with the certificate. |  |
| Non Critical Extension OI Ds a| Array of String | Object identifiers (OIDs) of non-critical extensions in the certificate. |  |
| Not After a| Date | Expiration date of the certificate. |  |
| Not Before a| Date | Date from which the certificate is valid. |  |
| Public Key a| <<PublicKeyData>> | Public key information from the certificate. |  |
| Serial Number a| Number | Serial number of the certificate. |  |
| Serial Number Object a| <<SerialNumberData>> | Serial number object containing detailed serial number information. |  |
| Sig Alg Name a| String | Name of the signature algorithm used to sign the certificate. |  |
| Sig Alg OID a| String | Object identifier (OID) of the signature algorithm. |  |
| Sig Alg Params a| Binary | Parameters for the signature algorithm. |  |
| Signature a| Binary | Digital signature of the certificate. |  |
| Subject Alternative Names a| Array of <<AlternativeNameData>> | Alternative names for the certificate subject. |  |
| Subject DN a| <<PrincipalData>> | Distinguished name of the certificate subject. |  |
| Subject X500 Principal a| <<X500PrincipalData>> | X.500 principal information for the certificate subject. |  |
| Type a| String | Type of the certificate. |  |
| Version a| Number | Version number of the certificate format. |  |
|===

[[CertificateExtension]]
=== Certificate Extension

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Criticality a| Boolean | Indicates whether the extension is critical. If `true`, the extension must be processed by the certificate user. |  |
| Oid a| String | Object identifier (OID) that uniquely identifies the extension type. |  |
| Value a| Binary | The extension value in its encoded form. |  |
|===

[[AlternativeNameData]]
=== Alternative Name Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | The alternative name value. |  |
| Type a| Number | The type of alternative name. |  |
|===

[[PrincipalData]]
=== Principal Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Common Name a| String | The common name (CN) component of the distinguished name. |  |
| Name a| String | The full distinguished name string representation. |  |
|===

[[X500PrincipalData]]
=== X500 Principal Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Name a| String | The X.500 distinguished name in string format. |  |
|===

[[PublicKeyData]]
=== Public Key Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Algorithm a| String | The algorithm used for the public key (for example, RSA, DSA, EC). |  |
| Encoded a| Binary | The encoded form of the public key. |  |
| Modulus a| Number | The modulus value for RSA public keys. |  |
| Params a| Number | Algorithm-specific parameters for the public key. |  |
| Public Key a| String | The public key value in string representation. |  |
|===

[[SerialNumberData]]
=== Serial Number Data

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Serial Number a| Number | The serial number value of the certificate. |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

Configures the redelivery policy for executing requests that generate errors. You can add a redelivery policy to any source in a flow.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | Maximum number of times to process a redelivered request unsuccessfully before returning a REDELIVERY_EXHAUSTED error. |  |
| Message Digest Algorithm a| String | Secure hashing algorithm to use if the *Use Secure Hash* field is `true`. If the payload of the message is a Java object, Mule ignores this value and returns the value that the payload's `hashCode()` returned. |  |
| Message Identifier a| <<RedeliveryPolicyMessageIdentifier>> | One or more expressions that determine if a message was redelivered. This property can be set only if the *Use Secure Hash* field is `false`. |  |
| Object Store a| ObjectStore | Configures the object store that stores the redelivery counter for each message. |  |
|===

[[RedeliveryPolicyMessageIdentifier]]
=== Redelivery Policy Message Identifier

Configures how to identify a redelivered message and how to find out when the message was redelivered.

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Use Secure Hash a| Boolean | If `true`, Mule uses a secure hash algorithm to identify a redelivered message. |  |
| Id Expression a| String | One or more expressions that determine when a message was redelivered. You can set this property only if the *Use Secure Hash* field is `false`. |  |
|===

== See Also

* xref:connectors::introduction/intro-config-use-acb.adoc[]
* xref:connectors::introduction/intro-config-use-studio.adoc[Using Studio to Configure a Connector]
* xref:index.adoc[A2A Connector Overview]
* https://help.salesforce.com[Salesforce Help]
